# intarot

./: .gitignore  .lfsconfig  CNAME  Cargo.toml  android.html  capacitor.config.json  containers-12720e8b3c7140f6.css  containers-325ac3f0fbcfcb9.css  containers-8036c1d7f78f1ba0.css  containers.css  cyberpunk-soothsayers-4e4cef8d69261b60.js  cyberpunk-soothsayers-4e4cef8d69261b60_bg.wasm  cyberpunk-soothsayers-651ca1e3a74b4b04.js  cyberpunk-soothsayers-651ca1e3a74b4b04_bg.wasm  cyberpunk-soothsayers-84a3e8817c789a1e.js  cyberpunk-soothsayers-84a3e8817c789a1e_bg.wasm  cyberpunk-soothsayers-887a43e1f8baac60.js  cyberpunk-soothsayers-887a43e1f8baac60_bg.wasm  cyberpunk-soothsayers-ab91a3d19166d0dd.js  cyberpunk-soothsayers-ab91a3d19166d0dd_bg.wasm  cyberpunk-soothsayers-d9eae0352dde00c7.js  cyberpunk-soothsayers-d9eae0352dde00c7_bg.wasm  dark-ad7110a841192405.css  dark-c6dccd8456f9acb7.css  dark.scss  data.txt  eighth-arcana-1837dbe95d9ce69d.js  eighth-arcana-1837dbe95d9ce69d_bg.wasm  eighth-arcana-20b15533969cddfd.js  eighth-arcana-20b15533969cddfd_bg.wasm  eighth-arcana-526eaf49407fb08.js  eighth-arcana-526eaf49407fb08_bg.wasm  eighth-arcana-5f6e03b6e5075401.js  eighth-arcana-5f6e03b6e5075401_bg.wasm  eighth-arcana-6a62eb93c7f45f89.js  eighth-arcana-6a62eb93c7f45f89_bg.wasm  eighth-arcana-79c928369fb49fc.js  eighth-arcana-79c928369fb49fc_bg.wasm  eighth-arcana-aba2a362777f13b.js  eighth-arcana-aba2a362777f13b_bg.wasm  (+296 more)
.github/workflows/: continuous_deployment.yml  test.yml
.netlify/: state.json
.well-known/: apple-app-site-association  assetlinks.json
android/: capacitor.settings.gradle  gradle.properties
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/intarot/app/: MainActivity.java
android/app/src/main/res/drawable/: icon_foreground.xml
android/app/src/main/res/values/: strings.xml
examples/image_rename/: Cargo.toml
examples/image_rename/src/: card.rs  guide.rs  main.rs
examples/spreadsheet-update/: Cargo.toml
examples/spreadsheet-update/src/: main.rs
ios/App/: Podfile
ios/App/App/: App.entitlements  Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/App/App/Assets.xcassets/Splash.imageset/: Contents.json
netlify-stuff/netlify/edge-functions/: og-param-proxy.js
netlify/edge-functions/: og-param-proxy.js
plugins/: capacitor-rate-app.js  import-map.json
snippets/intarot-31e5e252b2c79c8d/: inline0.js  inline1.js  inline2.js  inline4.js  inline5.js  inline6.js  inline7.js  inline8.js
src/: main.rs
src/data/: achievement.rs  card.rs  description_layout.rs  description_type.rs  guide.rs  image_data.rs  image_description.rs  image_meta.rs  mod.rs  ordering.rs  question_data.rs  soothsayer.rs  spread_id.rs  spread_type.rs  src_data.rs  star_sign.rs
src/state/: achievements_state.rs  card_page.rs  card_page_state.rs  choose_soothsayer_message.rs  choose_star_sign_message.rs  data_state.rs  description_state.rs  device_uuid.rs  failed_logs_state.rs  guide_knowledge.rs  logging.rs  mailchimp_state.rs  messages.rs  meta_state.rs  mod.rs  nagging_state.rs  opening_page.rs  page_state.rs  preferences_state.rs  proceed_message.rs  prompts_state.rs  soothsayer_page.rs  spread_descriptions.rs  user_state.rs
src/text/: evelyn.txt  madame.txt  maledictus.txt  opening_p1.txt  opening_p2.txt  opening_p3.txt  prompts.txt
src/tsv/: descriptions.tsv  guide_prompts.tsv  guide_spreads.tsv  guide_star_signs.tsv  image_names.tsv  prompts.tsv  spread_prompts.tsv  spreads.tsv
src/web/: advanced_view.rs  app.rs  app_redirect.rs  back_button.rs  button_component.rs  capacitor.rs  card_view.rs  cards_view.rs  carousel_component.rs  cheat.rs  custom_view.rs  final_card.rs  final_card_view.rs  guide_carousel.rs  guide_view.rs  image_description.rs  image_meta.rs  js.rs  landing_view.rs  logo.rs  mailchimp.rs  mod.rs  modal_dialog.rs  notifications.rs  opening_view.rs  particles.rs  preferences_view.rs  question_view.rs  rate.rs  restart_view.rs  route.rs  select_component.rs  share_button.rs  share_card_view.rs  share_component.rs  social.rs  soothsayer.rs  soothsayer_view.rs  spread_view.rs  startup.rs  (+2 more)
