[package]
name = "intarot"
version = "0.1.0"
edition = "2021"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["astrology", "tarot", "ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
strum = {version = "0.24", features = ["derive"]}
rand = {version = "0.8"}
lazy_static = "1"

log = "0.4"
wasm-logger = "0.2"
yew = { version="0.20", features = ["csr",] }
yewdux = { version="0.9" }
yew-hooks = { version="0.2" }

wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
js-sys = "0.3"
getrandom = {version="0.2", features=["js"]}
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.66"

yew-router = "0.17.0"
url-escape = "0.1.1"
chrono = {version="0.4", features = ["serde", "wasmbind"]}

[dev-dependencies]
ntest = "0.9.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlDialogElement",
]


[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3
