[package]
name = "intarot"
version = "0.1.0"
edition = "2021"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["tarot", "ai"]

[dependencies]
itertools = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
strum = {version = "0.24", features = ["derive"]}
rand = {version = "0.8"}

log = "0.4"
wasm-logger = "0.2"
yew = { version="0.20", features = ["csr",] }
yewdux = { version="0.9" }
yew-hooks = { version="0.2" }

wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
serde-wasm-bindgen = "0.4.5"
js-sys = "0.3"
getrandom = {version="0.2", features=["js"]}
anyhow = "1.0.66"

yew-router = "0.17.0"
url-escape = "0.1.1"
wee_alloc = "0.4.5"
base64 = "0.21.0"
reqwest = { version = "0.11.14", features = ["json"] }
num-derive = "0.3.3"
num-traits = "0.2.15"

importunate = {version="0.1.1", features= ["serde"]}
serde_with = "2.2.0"

capacitor_bindings = "*"

[dev-dependencies]
ntest = "0.9.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlDialogElement",
    "HtmlCanvasElement", "CanvasRenderingContext2d",
    "Navigator", "ShareData"
]


[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 'z'

[features]
web =["capacitor_bindings/web"]
android = ["capacitor_bindings/android"]
ios = ["capacitor_bindings/ios"]